antlr4/SugarParser.cpp

// Generated from E:/Sugar/Sugar.g4 by ANTLR 4.13.2


#include "SugarListener.h"
#include "SugarVisitor.h"

#include "SugarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SugarParserStaticData final {
  SugarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SugarParserStaticData(const SugarParserStaticData&) = delete;
  SugarParserStaticData(SugarParserStaticData&&) = delete;
  SugarParserStaticData& operator=(const SugarParserStaticData&) = delete;
  SugarParserStaticData& operator=(SugarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sugarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<SugarParserStaticData> sugarParserStaticData = nullptr;

void sugarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sugarParserStaticData != nullptr) {
    return;
  }
#else
  assert(sugarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SugarParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "block", "declaration", "function_declaration", 
      "class_init", "var_declaration", "list_declaration", "class_inheritance_list", 
      "class_declaration", "assignment", "basic_assignment", "default_assignment", 
      "return_statement", "break_statement", "continue_statement", "expression", 
      "pipeline_expression", "elvis_expression", "boolean_or_expression", 
      "boolean_and_expression", "comparison_expression", "multi_comparison_item", 
      "multi_comparison_or_expression", "multi_comparison_and_expression", 
      "multi_comparison_object_access", "multi_comparison_optional_object_access", 
      "multi_comparison_expression", "additive_expression", "multiplicative_expression", 
      "exponentiation_expression", "unary_expression", "post_fix_expression", 
      "object_access_chain", "optional_object_access_chain", "primary_expression", 
      "terminal_expression", "switch_expression", "case_list", "list_access", 
      "list_pushback", "list_insertion", "list_removal", "list_at_access", 
      "if_expression", "loop_expression", "while_loop", "for_loop", "parameter_list", 
      "class_member_segment", "class_constructor", "class_operator_override", 
      "class_overrideable_operator", "variable_type", "function_call", "argument_list", 
      "user_defined_type", "comparison_symbol", "formatted_string", "and_logic_operator", 
      "or_logic_operator"
    },
    std::vector<std::string>{
      "", "'f'", "'++'", "'--'", "'!'", "'^'", "'*'", "'/'", "'%'", "'+'", 
      "'-'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'->'", "'&&'", 
      "'and'", "'||'", "'or'", "'='", "'\\u003F='", "'\\u003F:'", "'<<'", 
      "'@'", "'.'", "'\\u003F.'", "'=>'", "'|>'", "';'", "'('", "')'", "'{'", 
      "'}'", "'['", "']'", "'return'", "'break'", "'continue'", "'#'", "'if'", 
      "'else'", "'while'", "'for'", "','", "'class'", "'public'", "'protected'", 
      "'private'", "'int'", "'dec'", "'string'", "'bool'", "'true'", "'false'", 
      "'any'", "'switch'", "'case'", "'default'", "':'", "'$'"
    },
    std::vector<std::string>{
      "", "", "INCREMENT", "DECREMENT", "NOT", "POW", "MUL", "DIV", "MOD", 
      "PLUS", "MINUS", "DEQUAL", "NEQUAL", "LESS", "LESSEQUAL", "GREATER", 
      "GREATEREQUAL", "MULTI_CMP_ARROW", "AND", "WORD_AND", "OR", "WORD_OR", 
      "EQUAL", "DEFAULT_ASSIGN", "ELVIS", "PUSHBACK", "AT", "ACCESS", "OPT_ACCESS", 
      "ARROW", "PIPE", "SEMICOLON", "LPAREN", "RPAREN", "LCURL", "RCURL", 
      "LBRACK", "RBRACK", "RETURN", "BREAK", "CONTINUE", "LISTDECL", "IF", 
      "ELSE", "WHILE", "FOR", "COMMA", "CLASS", "PUBLIC", "PROTECTED", "PRIVATE", 
      "INTTYPE", "DECIMALTYPE", "STRINGTYPE", "BOOLTYPE", "BOOL_TRUE", "BOOL_FALSE", 
      "ANYTYPE", "SWITCH", "CASE", "DEFAULT", "COLON", "LAST_ASSIGNED", 
      "INTEGER", "DECIMAL", "VAR", "STRING", "WS", "COMMENT", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sugarParserStaticData = std::move(staticData);
}

}

SugarParser::SugarParser(TokenStream *input) : SugarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SugarParser::SugarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SugarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sugarParserStaticData->atn, sugarParserStaticData->decisionToDFA, sugarParserStaticData->sharedContextCache, options);
}

SugarParser::~SugarParser() {
  delete _interpreter;
}

const atn::ATN& SugarParser::getATN() const {
  return *sugarParserStaticData->atn;
}

std::string SugarParser::getGrammarFileName() const {
  return "Sugar.g4";
}

const std::vector<std::string>& SugarParser::getRuleNames() const {
  return sugarParserStaticData->ruleNames;
}

const dfa::Vocabulary& SugarParser::getVocabulary() const {
  return sugarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SugarParser::getSerializedATN() const {
  return sugarParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

SugarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SugarParser::Class_declarationContext *> SugarParser::ProgramContext::class_declaration() {
  return getRuleContexts<SugarParser::Class_declarationContext>();
}

SugarParser::Class_declarationContext* SugarParser::ProgramContext::class_declaration(size_t i) {
  return getRuleContext<SugarParser::Class_declarationContext>(i);
}

std::vector<SugarParser::Function_declarationContext *> SugarParser::ProgramContext::function_declaration() {
  return getRuleContexts<SugarParser::Function_declarationContext>();
}

SugarParser::Function_declarationContext* SugarParser::ProgramContext::function_declaration(size_t i) {
  return getRuleContext<SugarParser::Function_declarationContext>(i);
}

std::vector<SugarParser::StatementContext *> SugarParser::ProgramContext::statement() {
  return getRuleContexts<SugarParser::StatementContext>();
}

SugarParser::StatementContext* SugarParser::ProgramContext::statement(size_t i) {
  return getRuleContext<SugarParser::StatementContext>(i);
}


size_t SugarParser::ProgramContext::getRuleIndex() const {
  return SugarParser::RuleProgram;
}

void SugarParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void SugarParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any SugarParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SugarVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

SugarParser::ProgramContext* SugarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, SugarParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -4037277225404333038) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 7) != 0)) {
      setState(125);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(122);
        class_declaration();
        break;
      }

      case 2: {
        setState(123);
        function_declaration();
        break;
      }

      case 3: {
        setState(124);
        statement();
        break;
      }

      default:
        break;
      }
      setState(129);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SugarParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SugarParser::StatementContext::SEMICOLON() {
  return getToken(SugarParser::SEMICOLON, 0);
}

SugarParser::DeclarationContext* SugarParser::StatementContext::declaration() {
  return getRuleContext<SugarParser::DeclarationContext>(0);
}

SugarParser::ExpressionContext* SugarParser::StatementContext::expression() {
  return getRuleContext<SugarParser::ExpressionContext>(0);
}

SugarParser::AssignmentContext* SugarParser::StatementContext::assignment() {
  return getRuleContext<SugarParser::AssignmentContext>(0);
}

SugarParser::Return_statementContext* SugarParser::StatementContext::return_statement() {
  return getRuleContext<SugarParser::Return_statementContext>(0);
}

SugarParser::Break_statementContext* SugarParser::StatementContext::break_statement() {
  return getRuleContext<SugarParser::Break_statementContext>(0);
}

SugarParser::Continue_statementContext* SugarParser::StatementContext::continue_statement() {
  return getRuleContext<SugarParser::Continue_statementContext>(0);
}

SugarParser::List_pushbackContext* SugarParser::StatementContext::list_pushback() {
  return getRuleContext<SugarParser::List_pushbackContext>(0);
}

SugarParser::List_insertionContext* SugarParser::StatementContext::list_insertion() {
  return getRuleContext<SugarParser::List_insertionContext>(0);
}

SugarParser::List_removalContext* SugarParser::StatementContext::list_removal() {
  return getRuleContext<SugarParser::List_removalContext>(0);
}

SugarParser::If_expressionContext* SugarParser::StatementContext::if_expression() {
  return getRuleContext<SugarParser::If_expressionContext>(0);
}

SugarParser::Loop_expressionContext* SugarParser::StatementContext::loop_expression() {
  return getRuleContext<SugarParser::Loop_expressionContext>(0);
}


size_t SugarParser::StatementContext::getRuleIndex() const {
  return SugarParser::RuleStatement;
}

void SugarParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void SugarParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any SugarParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SugarVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

SugarParser::StatementContext* SugarParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SugarParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(147);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SugarParser::T__0:
      case SugarParser::NOT:
      case SugarParser::MINUS:
      case SugarParser::LPAREN:
      case SugarParser::RETURN:
      case SugarParser::BREAK:
      case SugarParser::CONTINUE:
      case SugarParser::INTTYPE:
      case SugarParser::DECIMALTYPE:
      case SugarParser::STRINGTYPE:
      case SugarParser::BOOLTYPE:
      case SugarParser::BOOL_TRUE:
      case SugarParser::BOOL_FALSE:
      case SugarParser::ANYTYPE:
      case SugarParser::SWITCH:
      case SugarParser::LAST_ASSIGNED:
      case SugarParser::INTEGER:
      case SugarParser::DECIMAL:
      case SugarParser::VAR:
      case SugarParser::STRING: {
        enterOuterAlt(_localctx, 1);
        setState(139);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          setState(130);
          declaration();
          break;
        }

        case 2: {
          setState(131);
          expression();
          break;
        }

        case 3: {
          setState(132);
          assignment();
          break;
        }

        case 4: {
          setState(133);
          return_statement();
          break;
        }

        case 5: {
          setState(134);
          break_statement();
          break;
        }

        case 6: {
          setState(135);
          continue_statement();
          break;
        }

        case 7: {
          setState(136);
          list_pushback();
          break;
        }

        case 8: {
          setState(137);
          list_insertion();
          break;
        }

        case 9: {
          setState(138);
          list_removal();
          break;
        }

        default:
          break;
        }
        setState(141);
        match(SugarParser::SEMICOLON);
        break;
      }

      case SugarParser::IF:
      case SugarParser::WHILE:
      case SugarParser::FOR: {
        enterOuterAlt(_localctx, 2);
        setState(145);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case SugarParser::IF: {
            setState(143);
            if_expression();
            break;
          }

          case SugarParser::WHILE:
          case SugarParser::FOR: {
            setState(144);
            loop_expression();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

SugarParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SugarParser::BlockContext::LCURL() {
  return getToken(SugarParser::LCURL, 0);
}

tree::TerminalNode* SugarParser::BlockContext::RCURL() {
  return getToken(SugarParser::RCURL, 0);
}

std::vector<SugarParser::StatementContext *> SugarParser::BlockContext::statement() {
  return getRuleContexts<SugarParser::StatementContext>();
}

SugarParser::StatementContext* SugarParser::BlockContext::statement(size_t i) {
  return getRuleContext<SugarParser::StatementContext>(i);
}


size_t SugarParser::BlockContext::getRuleIndex() const {
  return SugarParser::RuleBlock;
}

void SugarParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void SugarParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any SugarParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SugarVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

SugarParser::BlockContext* SugarParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 4, SugarParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    match(SugarParser::LCURL);
    setState(153);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -4037417962892688366) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 7) != 0)) {
      setState(150);
      statement();
      setState(155);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(156);
    match(SugarParser::RCURL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

SugarParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SugarParser::Class_initContext* SugarParser::DeclarationContext::class_init() {
  return getRuleContext<SugarParser::Class_initContext>(0);
}

SugarParser::Function_declarationContext* SugarParser::DeclarationContext::function_declaration() {
  return getRuleContext<SugarParser::Function_declarationContext>(0);
}


size_t SugarParser::DeclarationContext::getRuleIndex() const {
  return SugarParser::RuleDeclaration;
}

void SugarParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void SugarParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


std::any SugarParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SugarVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SugarParser::DeclarationContext* SugarParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, SugarParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(160);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(158);
      class_init();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(159);
      function_declaration();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_declarationContext ------------------------------------------------------------------

SugarParser::Function_declarationContext::Function_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SugarParser::Var_declarationContext* SugarParser::Function_declarationContext::var_declaration() {
  return getRuleContext<SugarParser::Var_declarationContext>(0);
}

tree::TerminalNode* SugarParser::Function_declarationContext::LPAREN() {
  return getToken(SugarParser::LPAREN, 0);
}

SugarParser::Parameter_listContext* SugarParser::Function_declarationContext::parameter_list() {
  return getRuleContext<SugarParser::Parameter_listContext>(0);
}

tree::TerminalNode* SugarParser::Function_declarationContext::RPAREN() {
  return getToken(SugarParser::RPAREN, 0);
}

SugarParser::BlockContext* SugarParser::Function_declarationContext::block() {
  return getRuleContext<SugarParser::BlockContext>(0);
}


size_t SugarParser::Function_declarationContext::getRuleIndex() const {
  return SugarParser::RuleFunction_declaration;
}

void SugarParser::Function_declarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_declaration(this);
}

void SugarParser::Function_declarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_declaration(this);
}


std::any SugarParser::Function_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SugarVisitor*>(visitor))
    return parserVisitor->visitFunction_declaration(this);
  else
    return visitor->visitChildren(this);
}

SugarParser::Function_declarationContext* SugarParser::function_declaration() {
  Function_declarationContext *_localctx = _tracker.createInstance<Function_declarationContext>(_ctx, getState());
  enterRule(_localctx, 8, SugarParser::RuleFunction_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    var_declaration();
    setState(168);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(163);
      match(SugarParser::LPAREN);
      setState(164);
      parameter_list();
      setState(165);
      match(SugarParser::RPAREN);
      setState(166);
      block();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_initContext ------------------------------------------------------------------

SugarParser::Class_initContext::Class_initContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SugarParser::Var_declarationContext* SugarParser::Class_initContext::var_declaration() {
  return getRuleContext<SugarParser::Var_declarationContext>(0);
}

tree::TerminalNode* SugarParser::Class_initContext::LPAREN() {
  return getToken(SugarParser::LPAREN, 0);
}

SugarParser::Argument_listContext* SugarParser::Class_initContext::argument_list() {
  return getRuleContext<SugarParser::Argument_listContext>(0);
}

tree::TerminalNode* SugarParser::Class_initContext::RPAREN() {
  return getToken(SugarParser::RPAREN, 0);
}


size_t SugarParser::Class_initContext::getRuleIndex() const {
  return SugarParser::RuleClass_init;
}

void SugarParser::Class_initContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClass_init(this);
}

void SugarParser::Class_initContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SugarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClass_init(this);
}


std::any SugarParser::Class_initContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SugarVisitor*>(visitor))
    return parserVisitor->visitClass_init(this);
  else
    return visitor->visitChildren(this);
}

SugarParser::Class_initContext* SugarParser::class_init() {
  Class_initContext *_localctx = _tracker.createInstance<Class_initContext>(_ctx, getState());
  enterRule(_localctx, 10, SugarParser::RuleClass_init);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(170);
    var_declaration();
    setState(175);
    _errHandler->sync(this);
